crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__receiver_function.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_classes(r#\"\n            // main\n            struct Foo[T] {\n                inner: []T\n            }\n\n            fn (Foo[T]) bar[T](self) -> I32 {\n                return self.inner.len()\n            }\n            \n            fn main() {\n                let f: Foo[String] = Foo { inner: std.arrayOfZeros(3) }\n                std.print(f.bar())\n            }\n            \"#)"
---
Foo$Ljava$lang$String:
ClassData
  this_class:		#2	Foo$Ljava$lang$String
  super_class:		#6	java/lang/Object
Constant pool:
  #01 = Utf8			Foo$Ljava$lang$String
  #02 = Class		#1	Foo$Ljava$lang$String
  #03 = Utf8			<init>
  #04 = Utf8			()V
  #05 = Utf8			java/lang/Object
  #06 = Class		#5	java/lang/Object
  #07 = NameAndType	#3:#4	<init>:()V
  #08 = MethodRef	#6.#7	java/lang/Object:<init>:()V
  #09 = Utf8			Code
  #10 = Utf8			StackMapTable
  #11 = Utf8			toString
  #12 = Utf8			()Ljava/lang/String;
  #13 = Utf8			java/lang/StringBuilder
  #14 = Class		#13	java/lang/StringBuilder
  #15 = Utf8			java/lang/String
  #16 = Class		#15	java/lang/String
  #17 = Utf8			[Ljava/lang/String;
  #18 = Class		#17	[Ljava/lang/String;
  #19 = MethodRef	#14.#7	java/lang/StringBuilder:<init>:()V
  #20 = Utf8			Foo { 
  #21 = String		#20	Foo { 
  #22 = Utf8			append
  #23 = Utf8			(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #24 = NameAndType	#22:#23	append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #25 = MethodRef	#14.#24	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #26 = Utf8			inner: 
  #27 = String		#26	inner: 
  #28 = Utf8			inner
  #29 = NameAndType	#28:#17	inner:[Ljava/lang/String;
  #30 = FieldRef	#2.#29	Foo$Ljava$lang$String.inner:[Ljava/lang/String;
  #31 = Utf8			java/util/Arrays
  #32 = Class		#31	java/util/Arrays
  #33 = Utf8			([Ljava/lang/Object;)Ljava/lang/String;
  #34 = NameAndType	#11:#33	toString:([Ljava/lang/Object;)Ljava/lang/String;
  #35 = MethodRef	#32.#34	java/util/Arrays:toString:([Ljava/lang/Object;)Ljava/lang/String;
  #36 = Utf8			 }
  #37 = String		#36	 }
  #38 = NameAndType	#11:#12	toString:()Ljava/lang/String;
  #39 = MethodRef	#14.#38	java/lang/StringBuilder:toString:()Ljava/lang/String;

{
  PUBLIC inner: [Ljava/lang/String;

  fn <init> {
    descriptor: ()V
    flags: PUBLIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: InvokeSpecial		#8	java/lang/Object:<init>:()V
      5: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ UninitializedThis ]
          Stack = [  ]
  }

  fn toString {
    descriptor: ()Ljava/lang/String;
    flags: PUBLIC
    Code:
      stack = 2, locals = 2
       0: New			#14	java/lang/StringBuilder
       3: Dup
       4: InvokeSpecial		#19	java/lang/StringBuilder:<init>:()V
       7: LoadConstant		#21	Foo { 
       9: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      12: LoadConstant		#27	inner: 
      14: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      17: ALoad			0
      19: GetField		#30	Foo$Ljava$lang$String.inner:[Ljava/lang/String;
      22: InvokeStatic		#35	java/util/Arrays:toString:([Ljava/lang/Object;)Ljava/lang/String;
      25: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      28: LoadConstant		#37	 }
      30: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      33: InvokeVirtual		#39	java/lang/StringBuilder:toString:()Ljava/lang/String;
      36: AReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object 'Foo$Ljava$lang$String' ]
          Stack = [  ]
  }

}

-----

Main:
ClassData
  this_class:		#2	Main
  super_class:		#45	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			Foo$Ljava$lang$String
  #06 = Class		#5	Foo$Ljava$lang$String
  #07 = Utf8			[Ljava/lang/String;
  #08 = Class		#7	[Ljava/lang/String;
  #09 = Utf8			java/io/PrintStream
  #10 = Class		#9	java/io/PrintStream
  #11 = Utf8			<init>
  #12 = NameAndType	#11:#4	<init>:()V
  #13 = MethodRef	#6.#12	Foo$Ljava$lang$String:<init>:()V
  #14 = Integer			3
  #15 = Utf8			java/lang/String
  #16 = Class		#15	java/lang/String
  #17 = Utf8			inner
  #18 = NameAndType	#17:#7	inner:[Ljava/lang/String;
  #19 = FieldRef	#6.#18	Foo$Ljava$lang$String.inner:[Ljava/lang/String;
  #20 = Utf8			java/lang/System
  #21 = Class		#20	java/lang/System
  #22 = Utf8			out
  #23 = Utf8			Ljava/io/PrintStream;
  #24 = NameAndType	#22:#23	out:Ljava/io/PrintStream;
  #25 = FieldRef	#21.#24	java/lang/System.out:Ljava/io/PrintStream;
  #26 = Utf8			main$bar
  #27 = Utf8			(LFoo$Ljava$lang$String;)I
  #28 = NameAndType	#26:#27	main$bar:(LFoo$Ljava$lang$String;)I
  #29 = MethodRef	#2.#28	Main:main$bar:(LFoo$Ljava$lang$String;)I
  #30 = Utf8			println
  #31 = Utf8			(I)V
  #32 = NameAndType	#30:#31	println:(I)V
  #33 = MethodRef	#10.#32	java/io/PrintStream:println:(I)V
  #34 = Utf8			Code
  #35 = Utf8			StackMapTable
  #36 = Utf8			std$len
  #37 = Utf8			([Ljava/lang/String;)I
  #38 = NameAndType	#36:#37	std$len:([Ljava/lang/String;)I
  #39 = MethodRef	#2.#38	Main:std$len:([Ljava/lang/String;)I
  #40 = Utf8			main
  #41 = Utf8			([Ljava/lang/String;)V
  #42 = NameAndType	#3:#4	main$main:()V
  #43 = MethodRef	#2.#42	Main:main$main:()V
  #44 = Utf8			java/lang/Object
  #45 = Class		#44	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 3, locals = 2
       0: New			#6	Foo$Ljava$lang$String
       3: Dup
       4: InvokeSpecial		#13	Foo$Ljava$lang$String:<init>:()V
       7: Dup
       8: LoadConstant		#14	3
      10: ANewArray		#16	java/lang/String
      13: PutField		#19	Foo$Ljava$lang$String.inner:[Ljava/lang/String;
      16: AStore			0
      18: GetStatic		#25	java/lang/System.out:Ljava/io/PrintStream;
      21: ALoad			0
      23: InvokeStatic		#29	Main:main$bar:(LFoo$Ljava$lang$String;)I
      26: InvokeVirtual		#33	java/io/PrintStream:println:(I)V
      29: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main$bar {
    descriptor: (LFoo$Ljava$lang$String;)I
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: GetField		#19	Foo$Ljava$lang$String.inner:[Ljava/lang/String;
      5: InvokeStatic		#39	Main:std$len:([Ljava/lang/String;)I
      8: IReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object 'Foo$Ljava$lang$String' ]
          Stack = [  ]
  }

  fn std$len {
    descriptor: ([Ljava/lang/String;)I
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: ArrayLength
      3: IReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#43	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}

-----
