crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__stack_map_table_generation.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"loop {\\nif true {\\nprint(42)\\n}\\nprint(100)\\n}\")"
---
ClassData
  this_class:		#2	Main
  super_class:		#32	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			java/io/PrintStream
  #06 = Class		#5	java/io/PrintStream
  #07 = Utf8			java/lang/String
  #08 = Class		#7	java/lang/String
  #09 = Utf8			java/lang/System
  #10 = Class		#9	java/lang/System
  #11 = Utf8			out
  #12 = Utf8			Ljava/io/PrintStream;
  #13 = NameAndType	#11:#12	out:Ljava/io/PrintStream;
  #14 = FieldRef	#10.#13	java/lang/System.out:Ljava/io/PrintStream;
  #15 = Utf8			42
  #16 = String		#15	42
  #17 = Utf8			println
  #18 = Utf8			(Ljava/lang/String;)V
  #19 = NameAndType	#17:#18	println:(Ljava/lang/String;)V
  #20 = MethodRef	#6.#19	java/io/PrintStream:println:(Ljava/lang/String;)V
  #21 = Utf8			100
  #22 = String		#21	100
  #23 = Utf8			Code
  #24 = Utf8			StackMapTable
  #25 = Utf8			main
  #26 = Utf8			([Ljava/lang/String;)V
  #27 = Utf8			[Ljava/lang/String;
  #28 = Class		#27	[Ljava/lang/String;
  #29 = NameAndType	#3:#4	main$main:()V
  #30 = MethodRef	#2.#29	Main:main$main:()V
  #31 = Utf8			java/lang/Object
  #32 = Class		#31	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 2, locals = 1
       0: IConst			1
       1: IfI ==		15
       4: GetStatic		#14	java/lang/System.out:Ljava/io/PrintStream;
       7: LoadConstant		#16	42
       9: InvokeVirtual		#20	java/io/PrintStream:println:(Ljava/lang/String;)V
      12: Goto				15
      15: GetStatic		#14	java/lang/System.out:Ljava/io/PrintStream;
      18: LoadConstant		#22	100
      20: InvokeVirtual		#20	java/io/PrintStream:println:(Ljava/lang/String;)V
      23: Goto				0
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 10
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#30	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
