crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__struct.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_classes(r#\"\n            // main\n            struct Foo {\n                a: I32,\n                b: []Foo\n            }\n            fn main() {\n                let a: []Foo = arrayOf()\n            }\n            \"#)"
---
Foo:
ClassData
  this_class:		#2	Foo
  super_class:		#6	java/lang/Object
Constant pool:
  #01 = Utf8			Foo
  #02 = Class		#1	Foo
  #03 = Utf8			<init>
  #04 = Utf8			()V
  #05 = Utf8			java/lang/Object
  #06 = Class		#5	java/lang/Object
  #07 = NameAndType	#3:#4	<init>:()V
  #08 = MethodRef	#6.#7	java/lang/Object:<init>:()V
  #09 = Utf8			Code
  #10 = Utf8			StackMapTable
  #11 = Utf8			toString
  #12 = Utf8			()Ljava/lang/String;
  #13 = Utf8			java/lang/StringBuilder
  #14 = Class		#13	java/lang/StringBuilder
  #15 = Utf8			java/lang/String
  #16 = Class		#15	java/lang/String
  #17 = Utf8			[LFoo;
  #18 = Class		#17	[LFoo;
  #19 = MethodRef	#14.#7	java/lang/StringBuilder:<init>:()V
  #20 = Utf8			Foo { 
  #21 = String		#20	Foo { 
  #22 = Utf8			append
  #23 = Utf8			(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #24 = NameAndType	#22:#23	append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #25 = MethodRef	#14.#24	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #26 = Utf8			a: 
  #27 = String		#26	a: 
  #28 = Utf8			a
  #29 = Utf8			I
  #30 = NameAndType	#28:#29	a:I
  #31 = FieldRef	#2.#30	Foo.a:I
  #32 = Utf8			(I)Ljava/lang/StringBuilder;
  #33 = NameAndType	#22:#32	append:(I)Ljava/lang/StringBuilder;
  #34 = MethodRef	#14.#33	java/lang/StringBuilder:append:(I)Ljava/lang/StringBuilder;
  #35 = Utf8			, b: 
  #36 = String		#35	, b: 
  #37 = Utf8			b
  #38 = NameAndType	#37:#17	b:[LFoo;
  #39 = FieldRef	#2.#38	Foo.b:[LFoo;
  #40 = Utf8			java/util/Arrays
  #41 = Class		#40	java/util/Arrays
  #42 = Utf8			([Ljava/lang/Object;)Ljava/lang/String;
  #43 = NameAndType	#11:#42	toString:([Ljava/lang/Object;)Ljava/lang/String;
  #44 = MethodRef	#41.#43	java/util/Arrays:toString:([Ljava/lang/Object;)Ljava/lang/String;
  #45 = Utf8			 }
  #46 = String		#45	 }
  #47 = NameAndType	#11:#12	toString:()Ljava/lang/String;
  #48 = MethodRef	#14.#47	java/lang/StringBuilder:toString:()Ljava/lang/String;

{
  PUBLIC a: I

  PUBLIC b: [LFoo;

  fn <init> {
    descriptor: ()V
    flags: PUBLIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: InvokeSpecial		#8	java/lang/Object:<init>:()V
      5: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ UninitializedThis ]
          Stack = [  ]
  }

  fn toString {
    descriptor: ()Ljava/lang/String;
    flags: PUBLIC
    Code:
      stack = 2, locals = 2
       0: New			#14	java/lang/StringBuilder
       3: Dup
       4: InvokeSpecial		#19	java/lang/StringBuilder:<init>:()V
       7: LoadConstant		#21	Foo { 
       9: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      12: LoadConstant		#27	a: 
      14: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      17: ALoad			0
      19: GetField		#31	Foo.a:I
      22: InvokeVirtual		#34	java/lang/StringBuilder:append:(I)Ljava/lang/StringBuilder;
      25: LoadConstant		#36	, b: 
      27: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      30: ALoad			0
      32: GetField		#39	Foo.b:[LFoo;
      35: InvokeStatic		#44	java/util/Arrays:toString:([Ljava/lang/Object;)Ljava/lang/String;
      38: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      41: LoadConstant		#46	 }
      43: InvokeVirtual		#25	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      46: InvokeVirtual		#48	java/lang/StringBuilder:toString:()Ljava/lang/String;
      49: AReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object 'Foo' ]
          Stack = [  ]
  }

}

-----

Main:
ClassData
  this_class:		#2	Main
  super_class:		#19	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			[LFoo;
  #06 = Class		#5	[LFoo;
  #07 = Integer			0
  #08 = Utf8			Foo
  #09 = Class		#8	Foo
  #10 = Utf8			Code
  #11 = Utf8			StackMapTable
  #12 = Utf8			main
  #13 = Utf8			([Ljava/lang/String;)V
  #14 = Utf8			[Ljava/lang/String;
  #15 = Class		#14	[Ljava/lang/String;
  #16 = NameAndType	#3:#4	main$main:()V
  #17 = MethodRef	#2.#16	Main:main$main:()V
  #18 = Utf8			java/lang/Object
  #19 = Class		#18	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 2
      0: LoadConstant		#7	0
      2: ANewArray		#9	Foo
      5: AStore			0
      7: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#17	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}

-----
