crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__structural-3.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_classes(r#\"\n            // main\n            fn main() { print({a: \"test\"}.a) }\n            \"#)"
---
Main:
ClassData
  this_class:		#2	Main
  super_class:		#39	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			java/io/PrintStream
  #06 = Class		#5	java/io/PrintStream
  #07 = Utf8			Structural$1$aLjava$lang$String
  #08 = Class		#7	Structural$1$aLjava$lang$String
  #09 = Utf8			java/lang/String
  #10 = Class		#9	java/lang/String
  #11 = Utf8			java/lang/System
  #12 = Class		#11	java/lang/System
  #13 = Utf8			out
  #14 = Utf8			Ljava/io/PrintStream;
  #15 = NameAndType	#13:#14	out:Ljava/io/PrintStream;
  #16 = FieldRef	#12.#15	java/lang/System.out:Ljava/io/PrintStream;
  #17 = Utf8			<init>
  #18 = NameAndType	#17:#4	<init>:()V
  #19 = MethodRef	#8.#18	Structural$1$aLjava$lang$String:<init>:()V
  #20 = Utf8			test
  #21 = String		#20	test
  #22 = Utf8			a
  #23 = Utf8			Ljava/lang/String;
  #24 = NameAndType	#22:#23	a:Ljava/lang/String;
  #25 = FieldRef	#8.#24	Structural$1$aLjava$lang$String.a:Ljava/lang/String;
  #26 = Utf8			println
  #27 = Utf8			(Ljava/lang/Object;)V
  #28 = NameAndType	#26:#27	println:(Ljava/lang/Object;)V
  #29 = MethodRef	#6.#28	java/io/PrintStream:println:(Ljava/lang/Object;)V
  #30 = Utf8			Code
  #31 = Utf8			StackMapTable
  #32 = Utf8			main
  #33 = Utf8			([Ljava/lang/String;)V
  #34 = Utf8			[Ljava/lang/String;
  #35 = Class		#34	[Ljava/lang/String;
  #36 = NameAndType	#3:#4	main$main:()V
  #37 = MethodRef	#2.#36	Main:main$main:()V
  #38 = Utf8			java/lang/Object
  #39 = Class		#38	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 4, locals = 1
       0: GetStatic		#16	java/lang/System.out:Ljava/io/PrintStream;
       3: New			#8	Structural$1$aLjava$lang$String
       6: Dup
       7: InvokeSpecial		#19	Structural$1$aLjava$lang$String:<init>:()V
      10: Dup
      11: LoadConstant		#21	test
      13: PutField		#25	Structural$1$aLjava$lang$String.a:Ljava/lang/String;
      16: GetField		#25	Structural$1$aLjava$lang$String.a:Ljava/lang/String;
      19: InvokeVirtual		#29	java/io/PrintStream:println:(Ljava/lang/Object;)V
      22: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#37	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}

-----

Structural$1$aLjava$lang$String:
ClassData
  this_class:		#2	Structural$1$aLjava$lang$String
  super_class:		#6	java/lang/Object
Constant pool:
  #01 = Utf8			Structural$1$aLjava$lang$String
  #02 = Class		#1	Structural$1$aLjava$lang$String
  #03 = Utf8			<init>
  #04 = Utf8			()V
  #05 = Utf8			java/lang/Object
  #06 = Class		#5	java/lang/Object
  #07 = NameAndType	#3:#4	<init>:()V
  #08 = MethodRef	#6.#7	java/lang/Object:<init>:()V
  #09 = Utf8			Code
  #10 = Utf8			StackMapTable
  #11 = Utf8			toString
  #12 = Utf8			()Ljava/lang/String;
  #13 = Utf8			java/lang/StringBuilder
  #14 = Class		#13	java/lang/StringBuilder
  #15 = Utf8			java/lang/String
  #16 = Class		#15	java/lang/String
  #17 = MethodRef	#14.#7	java/lang/StringBuilder:<init>:()V
  #18 = Utf8			{ 
  #19 = String		#18	{ 
  #20 = Utf8			append
  #21 = Utf8			(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #22 = NameAndType	#20:#21	append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #23 = MethodRef	#14.#22	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #24 = Utf8			a: 
  #25 = String		#24	a: 
  #26 = Utf8			a
  #27 = Utf8			Ljava/lang/String;
  #28 = NameAndType	#26:#27	a:Ljava/lang/String;
  #29 = FieldRef	#2.#28	Structural$1$aLjava$lang$String.a:Ljava/lang/String;
  #30 = Utf8			(Ljava/lang/Object;)Ljava/lang/StringBuilder;
  #31 = NameAndType	#20:#30	append:(Ljava/lang/Object;)Ljava/lang/StringBuilder;
  #32 = MethodRef	#14.#31	java/lang/StringBuilder:append:(Ljava/lang/Object;)Ljava/lang/StringBuilder;
  #33 = Utf8			 }
  #34 = String		#33	 }
  #35 = NameAndType	#11:#12	toString:()Ljava/lang/String;
  #36 = MethodRef	#14.#35	java/lang/StringBuilder:toString:()Ljava/lang/String;

{
  PUBLIC a: Ljava/lang/String;

  fn <init> {
    descriptor: ()V
    flags: PUBLIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: InvokeSpecial		#8	java/lang/Object:<init>:()V
      5: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ UninitializedThis ]
          Stack = [  ]
  }

  fn toString {
    descriptor: ()Ljava/lang/String;
    flags: PUBLIC
    Code:
      stack = 2, locals = 2
       0: New			#14	java/lang/StringBuilder
       3: Dup
       4: InvokeSpecial		#17	java/lang/StringBuilder:<init>:()V
       7: LoadConstant		#19	{ 
       9: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      12: LoadConstant		#25	a: 
      14: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      17: ALoad			0
      19: GetField		#29	Structural$1$aLjava$lang$String.a:Ljava/lang/String;
      22: InvokeVirtual		#32	java/lang/StringBuilder:append:(Ljava/lang/Object;)Ljava/lang/StringBuilder;
      25: LoadConstant		#34	 }
      27: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      30: InvokeVirtual		#36	java/lang/StringBuilder:toString:()Ljava/lang/String;
      33: AReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object 'Structural$1$aLjava$lang$String' ]
          Stack = [  ]
  }

}

-----
