crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__structural-4.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_classes(r#\"\n            // main\n            fn main() {\n                let val: {a: I32} = {a: 42}\n                print(val.a)\n            }\n            \"#)"
---
Main:
ClassData
  this_class:		#2	Main
  super_class:		#36	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			Structural$1$aI
  #06 = Class		#5	Structural$1$aI
  #07 = Utf8			java/io/PrintStream
  #08 = Class		#7	java/io/PrintStream
  #09 = Utf8			<init>
  #10 = NameAndType	#9:#4	<init>:()V
  #11 = MethodRef	#6.#10	Structural$1$aI:<init>:()V
  #12 = Integer			42
  #13 = Utf8			a
  #14 = Utf8			I
  #15 = NameAndType	#13:#14	a:I
  #16 = FieldRef	#6.#15	Structural$1$aI.a:I
  #17 = Utf8			java/lang/System
  #18 = Class		#17	java/lang/System
  #19 = Utf8			out
  #20 = Utf8			Ljava/io/PrintStream;
  #21 = NameAndType	#19:#20	out:Ljava/io/PrintStream;
  #22 = FieldRef	#18.#21	java/lang/System.out:Ljava/io/PrintStream;
  #23 = Utf8			println
  #24 = Utf8			(I)V
  #25 = NameAndType	#23:#24	println:(I)V
  #26 = MethodRef	#8.#25	java/io/PrintStream:println:(I)V
  #27 = Utf8			Code
  #28 = Utf8			StackMapTable
  #29 = Utf8			main
  #30 = Utf8			([Ljava/lang/String;)V
  #31 = Utf8			[Ljava/lang/String;
  #32 = Class		#31	[Ljava/lang/String;
  #33 = NameAndType	#3:#4	main$main:()V
  #34 = MethodRef	#2.#33	Main:main$main:()V
  #35 = Utf8			java/lang/Object
  #36 = Class		#35	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 3, locals = 2
       0: New			#6	Structural$1$aI
       3: Dup
       4: InvokeSpecial		#11	Structural$1$aI:<init>:()V
       7: Dup
       8: LoadConstant		#12	42
      10: PutField		#16	Structural$1$aI.a:I
      13: AStore			0
      15: GetStatic		#22	java/lang/System.out:Ljava/io/PrintStream;
      18: ALoad			0
      20: GetField		#16	Structural$1$aI.a:I
      23: InvokeVirtual		#26	java/io/PrintStream:println:(I)V
      26: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#34	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}

-----

Structural$1$aI:
ClassData
  this_class:		#2	Structural$1$aI
  super_class:		#6	java/lang/Object
Constant pool:
  #01 = Utf8			Structural$1$aI
  #02 = Class		#1	Structural$1$aI
  #03 = Utf8			<init>
  #04 = Utf8			()V
  #05 = Utf8			java/lang/Object
  #06 = Class		#5	java/lang/Object
  #07 = NameAndType	#3:#4	<init>:()V
  #08 = MethodRef	#6.#7	java/lang/Object:<init>:()V
  #09 = Utf8			Code
  #10 = Utf8			StackMapTable
  #11 = Utf8			toString
  #12 = Utf8			()Ljava/lang/String;
  #13 = Utf8			java/lang/StringBuilder
  #14 = Class		#13	java/lang/StringBuilder
  #15 = Utf8			java/lang/String
  #16 = Class		#15	java/lang/String
  #17 = MethodRef	#14.#7	java/lang/StringBuilder:<init>:()V
  #18 = Utf8			{ 
  #19 = String		#18	{ 
  #20 = Utf8			append
  #21 = Utf8			(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #22 = NameAndType	#20:#21	append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #23 = MethodRef	#14.#22	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #24 = Utf8			a: 
  #25 = String		#24	a: 
  #26 = Utf8			a
  #27 = Utf8			I
  #28 = NameAndType	#26:#27	a:I
  #29 = FieldRef	#2.#28	Structural$1$aI.a:I
  #30 = Utf8			(I)Ljava/lang/StringBuilder;
  #31 = NameAndType	#20:#30	append:(I)Ljava/lang/StringBuilder;
  #32 = MethodRef	#14.#31	java/lang/StringBuilder:append:(I)Ljava/lang/StringBuilder;
  #33 = Utf8			 }
  #34 = String		#33	 }
  #35 = NameAndType	#11:#12	toString:()Ljava/lang/String;
  #36 = MethodRef	#14.#35	java/lang/StringBuilder:toString:()Ljava/lang/String;

{
  PUBLIC a: I

  fn <init> {
    descriptor: ()V
    flags: PUBLIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: InvokeSpecial		#8	java/lang/Object:<init>:()V
      5: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ UninitializedThis ]
          Stack = [  ]
  }

  fn toString {
    descriptor: ()Ljava/lang/String;
    flags: PUBLIC
    Code:
      stack = 2, locals = 2
       0: New			#14	java/lang/StringBuilder
       3: Dup
       4: InvokeSpecial		#17	java/lang/StringBuilder:<init>:()V
       7: LoadConstant		#19	{ 
       9: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      12: LoadConstant		#25	a: 
      14: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      17: ALoad			0
      19: GetField		#29	Structural$1$aI.a:I
      22: InvokeVirtual		#32	java/lang/StringBuilder:append:(I)Ljava/lang/StringBuilder;
      25: LoadConstant		#34	 }
      27: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      30: InvokeVirtual		#36	java/lang/StringBuilder:toString:()Ljava/lang/String;
      33: AReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object 'Structural$1$aI' ]
          Stack = [  ]
  }

}

-----
